# pic-openclaw-skill

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_v0.1.0.md  RELEASE_v0.2.0.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
clawhub/pic-residual-guard/: LICENSE  README.md  SKILL.md
docs/: action-risk-policy.md  clawhub-readiness.md  examples.md  licensing.md  pic-backed-mode.md  publication-checklist.md  release-checklist-v0.1.0.md  release-checklist-v0.2.0.md  security-boundary.md  setup.md  skill-only-mode.md  theory-alignment.md  threat-model.md
examples/bridge/: bridge-decision.example.json  openclaw_action_email.json  openclaw_action_file_write.json  openclaw_action_shell.json  openclaw_memory_write.json  openclaw_result_claim.json  openclaw_skill_install.json  pic-feedback.example.md
schemas/: bridge-decision.schema.json  openclaw-action-proposal.schema.json  openclaw-memory-write.schema.json  openclaw-result-claim.schema.json  openclaw-skill-install.schema.json
scripts/: pic_openclaw_check.py  render_feedback.py  validate_examples.py
skill/pic-residual-guard/: LICENSE  README.md  SKILL.md
skill/pic-residual-guard/examples/: memory_write.md  post_action_result.md  pre_action_email.md  pre_action_file_write.md  pre_action_network_request.md  pre_action_shell.md  skill_install.md
src/pic_openclaw_skill/: __init__.py  cli.py  decision.py  formatter.py  pic_backend.py  policy.py  records.py  safety.py
tests/: test_examples.py  test_formatter.py  test_pic_backend.py  test_policy.py  test_records.py  test_release_docs.py  test_security_boundary.py  test_skill_contract.py
tests/fixtures/: pic_report_agent_check_compact.json  pic_report_minimal.json  pic_report_residual.json  pic_report_settled_false.json
