[project]
name = "pic-openclaw-skill"
version = "0.1.0"
description = "PIC OpenClaw Skill: residual-aware action checks for OpenClaw agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "PIC OpenClaw Skill contributors" }]
keywords = [
  "openclaw",
  "ai-agent-safety",
  "action-checking",
  "workflow-verification",
  "residual-ledger",
  "percolation-inversion-compiler",
]
dependencies = [
  "pydantic>=2.8",
  "typer>=0.12",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
pic-openclaw-check = "pic_openclaw_skill.cli:app"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pic_openclaw_skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
